static-content-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileserver
  namespace: default
  labels:
    app: fileserver
spec:
  selector:
    app: fileserver
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
