ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: frontend
            port:
              number: 8080
      # NOTE: this should come after /api or else it will hijack requests
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fileserver
            port:
              number: 80
